--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -205,11 +205,11 @@
                   </label> #}
                   <p class="pos-neg edited" id="edited_ltstregNegative">Negative</p>
                   <div class="switch_rating">
-                    {# <input type="checkbox" class="checkbox" id="checkbox" name="rating"> #}
+                    <input type="checkbox" class="checkbox" id="checkbox">
                     <label for="checkbox"></label>
                   </div>
 
-                  {# <p class="pos-neg pos-pos edited" id="edited_ltstregPositive">Positive</p> #}
+                  <p class="pos-neg pos-pos edited" id="edited_ltstregPositive">Positive</p>
                   <button class="send-message"></button>
                   <textarea placeholder="Press Enter for send" class="e-mail_in" style="resize: none; overflow-y: hidden; position: absolute; top: 0px; left: -9999px; height: 80px; width: 848px; line-height: 25.7143px; text-decoration: none; letter-spacing: 0px;" tabindex="-1"></textarea>
                   <textarea name="name" placeholder="Press Enter for send" id="send_reviews" class="e-mail_in" style="resize: none; overflow-y: hidden;"></textarea>
