Count followers + fixtures followers reste pager

--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -115,7 +115,7 @@
           <div class="user_friends">
             <h3>
               Follow
-              <span>(186)</span>
+              <span>({{ countFollowers }})</span>
             </h3>
            {#  <div class="row">
               <div class="col-xs-3 col-sm-1 col-md-4 friend-item">
