--- a/web/sass/front/partials/practice.scss
+++ b/web/sass/front/partials/practice.scss
@@ -69,3 +69,86 @@
     }
   }
 }
+
+.btn-new-info {
+  background: transparent;
+  color:#363b51;
+  border:3px solid #363b51;
+  width: 100%;
+  border-radius: 5px;
+  padding: 15px 0px;
+  width: 190px;
+  outline: none;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  // background-color: #33CCFF;
+}
+
+.btn-new-info:hover{
+  color:#0084ff;
+  border-color:#0084ff;
+}
+
+
+.btn-suivre {
+  background: transparent;
+  color:#363b51;
+  border:3px solid #363b51;
+  width: 100%;
+  border-radius: 5px;
+  padding: 15px 0px;
+  width: 190px;
+  outline: none;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  // background-color: #33CCFF;
+}
+
+.btn-suivre:hover{
+  color:#0084ff;
+  border-color:#0084ff;
+}
+
+.btn-no-suivre {
+  background: transparent;
+  color:#363b51;
+  border:3px solid #363b51;
+  width: 100%;
+  border-radius: 5px;
+  padding: 15px 0px;
+  width: 190px;
+  outline: none;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  // background-color: #33CCFF;
+}
+
+.btn-no-suivre:hover{
+  color:#0084ff;
+  border-color:#0084ff;
+}
+
+#my-loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  position: fixed;
+  bottom: 10px;
+  left: 50%;
+  right: 50%;
+  display: none;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
