Event admin + refactor webPath methods

--- a/app/Resources/views/Ath/Admin/Commun/produit_first_image.html.twig
+++ b/app/Resources/views/Ath/Admin/Commun/produit_first_image.html.twig
@@ -2,6 +2,6 @@
 
 {% block field%}
 	{% if object.getFirstFileProduit() is not null %}
-    	<img src="{{ object.getFirstFileProduit().webPath }}" alt="" height="200px" width="200px" />
+    	<img src="/{{ object.getFirstFileProduit().webPath }}" alt="" height="200px" width="200px" />
 	{% endif %}
 {% endblock %}
