--- a/web/sass/front/partials/practice.scss
+++ b/web/sass/front/partials/practice.scss
@@ -152,3 +152,12 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.read-more{
+  cursor: pointer;
+}
+
+.link-color {
+  color: blue;
+}
+
