--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -1776,7 +1776,8 @@ footer .footer_list li a:hover
 	top: 30px;
 	width: 103%;
 	background: #fff;
-	left: -40px;
+	// left: -40px;
+	left: -10px;
 }
 .user_status:before {
 	content: "";
