--- a/web/sass/front/partials/auth.scss
+++ b/web/sass/front/partials/auth.scss
@@ -2,3 +2,7 @@ body.auth_container{
   background: url("../../images/header.png") no-repeat;
   background-size: cover;
 }
+
+#try_login{
+  margin-bottom: 20px;
+}
