--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -9,8 +9,8 @@
     <br/>
     <br/>
     <br/>
-    <h1>404</h1>
-    <h1>{{ "error.404" | trans({}, 'home') }}</h1>
+    <h1 class="title-error">{{ "error.404" | trans({}, 'home') }}</h1>
+    <h2>{{ "error.404_message" | trans({}, 'home') }}</h2>
     <br/>
     <p>
         <a href="#">{{ "retour.accueil" | trans({}, 'home') }}</a>.
