Correction top_nav_admin

--- a/app/Resources/views/top_nav_admin.html.twig
+++ b/app/Resources/views/top_nav_admin.html.twig
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="http://hammerjs.github.io/dist/hammer.min.js"></script>
-<script type="text/javascript" src="/bundles/atixheader/js/atixHeader.js"></script>
+<script type="text/javascript" src="/sonata/atixheader/js/atixHeader.js"></script>
 
-<link rel="stylesheet" href="{{ asset('bundles/atixheader/css/header.css') }}" type="text/css" media="all" />
+<link rel="stylesheet" href="/sonata/atixheader/css/header.css" type="text/css" media="all" />
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
