--- a/web/sass/front/common.scss
+++ b/web/sass/front/common.scss
@@ -1,3 +1,5 @@
+$icon-font-path : "/fonts/";
+
 
 @import "../../../bower_components/breakpoint-sass/stylesheets/breakpoint";
 @import "../../../bower_components/compass-mixins/lib/compass";
@@ -11,6 +13,7 @@
 
 
 @import "param_color";
+@import "param_typo";
 
 // Base Theme
 @import "theme/animate";
