--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,9 +28,14 @@
             {% endblock %}
         </div>
         {% block javascripts %}
+		
             <script type="text/javascript">
             $(document).ready(function($) {
-                
+			
+			$("#searchUser").focus(function() {
+				$(this).autocomplete('search', $(this).val())
+			});
+	
                 $( "#searchUser" ).autocomplete({
                     source: function( request, response ){
                         $.ajax({
@@ -38,6 +43,7 @@
                             data: {
                                 string: request.term
                             },
+							minLength: 2,
                             beforeSend: function(xhr) {
                                 // $("#atix_caissebundle_facture_filtre_fkSoc").addClass("loadinggif-for-input");
                             },
