--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -36,7 +36,7 @@
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
-            <input id="searchUser" class="ui-autocomplete-input" type="text" class="form-control" placeholder="{{ "Rechercher" | trans({}, 'home') }}">
+            <input id="searchUser" class="ui-autocomplete-input" type="text" class="form-control" placeholder="{{ "Rechercher" | trans({}, 'home') }}" autocomplete="off">
           </div>
         </form>
 
