--- a/web/sass/front/common.scss
+++ b/web/sass/front/common.scss
@@ -32,3 +32,4 @@ $icon-font-path : "/fonts/";
 @import "partials/practice.scss";
 @import "partials/home.scss";
 @import "partials/user.scss";
+@import "partials/sub.scss";
