--- a/web/sass/front/partials/sub.scss
+++ b/web/sass/front/partials/sub.scss
@@ -1,23 +1,59 @@
-.user_head {
-  .write.follow{
+.fos_user_registration_register{
+  h3{
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 5px;
+  }
+}
+
+.fos_user_registration_register{
+  [type="radio"]{
+    margin: 0 5px 0 15px;
+  }
+  .content{
+    background: #fff;
+    padding : 10px;
+  }
+  .content>div , .Human>div{
+    clear: both;
+    margin: 10px;
+    min-height: 30px;
+  }
+  .buttons{
+    margin: 0 18%;
+  }
+
+  .btn-success, .btn-info{
+    border-radius: 0;
     border: none;
     background: $main-color;
-    &:hover {
+    padding: 10px 50px;
+    font-size: 25px;
+    box-shadow: 0 3px 0 rgba(0,0,0,.0);
+    width: 50%;
+    float: none;
+    margin-left: 25%;
+    margin-bottom: 20px;
+    @include transition(box-shadow .1s);
+    &:hover{
       background: darken($main-color, 10%);
-      color: #fff;
+      box-shadow: 0 3px 7px rgba(0,0,0,.3);
     }
   }
-  .user_information{
-    p{
-      color :#444;
-    }
+  span{
+    display: block;
+    text-align: center;
+    padding: 30px 0;
   }
-  .write.unfollow{
-    border: none;
+  .btn-info{
+    margin-top: 10px;
     background: #444;
-    &:hover {
-      background: darken(#444, 10%);
-      color: #fff;
-    }
   }
+}
+
+.subscription_title{
+  color :#fff;
+  margin-bottom : 40px;
 }
