Ajout js dans les autres layout

--- a/app/Resources/views/Ath/Admin/standard_layout.html.twig
+++ b/app/Resources/views/Ath/Admin/standard_layout.html.twig
@@ -63,7 +63,9 @@ file that was distributed with this source code.
             {% endif %}
             <script type="text/javascript">
             $(document).ready(function($) {
-                
+                $("#searchUser").focus(function() {
+                    $(this).autocomplete('search', $(this).val())
+                });
                 $( "#searchUser" ).autocomplete({
                     source: function( request, response ){
                         $.ajax({
