--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -27,6 +27,9 @@
 
             <script type="text/javascript">
             $(document).ready(function($) {
+                $("#searchUser").focus(function() {
+                    $(this).autocomplete('search', $(this).val())
+                });
                 
                 $( "#searchUser" ).autocomplete({
                     source: function( request, response ){
